Dashboard cleanup for doogfood release
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1945 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,12 @@
 ﻿END-USER FEATURES ==========================
 
+	- Fix keyhole bug.
 	- [done] Own Name, Tagline
-	- Clean Dashboard Window
-		- Crown icon instead of java icon
-		- Title bar: Sneer
-		- Menu becomes only: Menu > Exit
-	- Own Pic - Remove AvatarPreviewFrame. Leave keyhole logic.
+	- [done] Clean Dashboard Window
+		- [done] Crown icon instead of java icon
+		- [done] Title bar: Sneer
+		- [done] Menu becomes only: Menu > Exit
+	- [done] Own Pic - Remove AvatarPreviewFrame. Leave keyhole logic.
 	- Contact List - (Host addresses hardcoded for Sandro, Bamboo and Klaus)
 		- Name
 		- Online indicator
