--- a/todo.txt
+++ b/todo.txt
@@ -100,10 +100,13 @@
 		- Eclipse Integration
 
 
+[END OF OFFICIAL TODO LIST]
 
 
 
 
+OLD STUFF
+=================
 
 		- SnappPreview
 			- Change size
