--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 ﻿MAIN ROADMAP
 ===================
+	- [Bamboo] configure svn diff max-length
 	- Fix SneerFreedom7Test
 	- commons-logging - Delete ALL occurences in the new Sneer project.
 		- remove dependencies from test resources :P
