Package names changing to lower case (part 2)
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1997 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,7 @@
 	---- INITIAL CLEANUP DONE
 
 	- Tray Icon and Dashboard Titlebar Icon - Ask Petra for a 16x16 icon to put there. Black on white? with transparency and anti-aliasing inside but not on the transparency border.
-	- Brick Publish (Supposedly already working)
+	- Brick Publish (Supposedly working already)
 	- Contact List - (Host addresses for Sneer developers are HARDCODED)
 		- Name
 		- Online indicator icon
