--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@
 		- Cyclic dependency detection: Compile one sourcefolder at a time, from the last in the .classpath list (most basic (wheel)) to the first in the list (most high-level (spikes)), without the other uncompiled sourcefolders in the path.
 	- [Bamboo] configure svn diff max-length for messages sent to the sneercommits group
 	- Fix SneerFreedom7Test
+		- Replace \tests\resources1\bricks\z\impl\libs\log4j-1.2.15.jar with a jar created by us and add it to the project classpath.
 	- MakeSerializable bytecode enhancer - Move to spikes. We are already using XStream's binary serializer anyway.
 		- Simplify the container because of the removal of the Enhancer.
 	---- INITIAL CLEANUP DONE
