--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,6 @@
 	- [Sandro] @Override SnappFrameImpl.getContainer causes a compile error in OpenJdk6 because getContainer is implemented in Component as packagelocal. :) 
 	- Fix SneerFreedom7Test
 		- Test with a lib.
-	- Output folders - All src folders are now being compiled to "sneerAPI-bin" and all tests are passing. Make all source folders compile to the default folder (bin) and fix the tests.
 	---- INITIAL CLEANUP DONE
 
 	- [Kalecser] Continuous Integration with Clover test coverage
@@ -23,7 +22,8 @@
 	- DynDNS Client ;)	
 	- Wind
 	---------------------------------- FIRST DOGFOOD RELEASE - We drop Skype chat
-
+	- ContainerUtils.getContainer() - Drop
+	- Output folders - Make all source folders compile to the default folder (bin) and fix the tests. Is this possible?
 	- Replace the AnnotatedFieldInjector by the StaticFieldInjector - Need to create our own TestRunner?
 	- Simplest Possible Kernel - What is it? Just injection?
 		- Simplify the container because of the removal of the Enhancer (MakeSerializable is a Spike now).
