--- a/todo.txt
+++ b/todo.txt
@@ -8,13 +8,14 @@
 	- SneerFreedom7Test - Test brick publishing with a lib.
 	---- INITIAL CLEANUP DONE
 
-	- Tray Icon and Dashboard Titlebar Icon - Ask Petra for a 16x16 icon to put there. Black on white? with transparency and anti-aliasing inside but not on the transparency border.
 	- Brick Publish (Supposedly working already)
 		- MainDemo - Publish all necessary bricks instead of just producing them.
 	- Contact List - (Host addresses for Sneer developers are HARDCODED)
 		- Name
 		- Online indicator icon
 	---------------------------------- FIRST DOGFOOD RELEASE - Anelise can start testing for real. All bugs she finds get fixed immediately. Improvement suggestions are added to this todo list.
+
+	- [Petra] Tray and Dashboard Titlebar Icon
 
 	- [Kalecser] Continuous Integration with Clover test coverage
 		- Low maintenance build: Interpret the .classpath file and compile the build exactly as Eclipse would.
@@ -26,10 +27,11 @@
 	- DynDNS Client ;)	
 	- Voice Calls - Migrate from the old sneermonolith project
 	---- WE DROP SKYPE :)
-	
+
+	- Open Jar leak - Fix in Freedom7Test
+	- Replace the AnnotatedFieldInjector by the StaticFieldInjector - Need to create our own TestRunner?
 	- ContainerUtils.getContainer() - Drop. Fix all uses.
 	- Output folders - Make all source folders compile to the default folder (bin) and fix the tests. Is this possible?
-	- Replace the AnnotatedFieldInjector by the StaticFieldInjector - Need to create our own TestRunner?
 	- Simplest Possible Kernel - What is it? Just injection?
 		- Simplify the container because of the removal of the Enhancer (MakeSerializable is a Spike now).
 		- ASM - Move asm*.jar to a brick lib
